# android-apps

./: .clang-format  .editorconfig  .gitignore  AndroidManifest.xml  LICENSE  README.md  android-build.sh  bassietest.apk  bassietest.apk.idsig  bob.toml  build.sh  check-copyright.sh  coinlist.apk  key.keystore  meta.sh  nos.apk  nos.apk.idsig  reactdroid.apk  redsquare.apk  redsquare.apk.idsig  rfidviewer.apk  tweakers.apk  vscode-setup.sh
.github/workflows/: bassiemusic-release.yml  bible-release.yml  check.yml  coinlist-release.yml  drankcounter-release.yml  hackernews-release.yml  nos-release.yml  redsquare-release.yml  rfidviewer-release.yml  tweakers-release.yml
bassiemusic/: bob.toml
bassietest/: AndroidManifest.xml  README.md  bassietest.apk  bob.toml  build.sh
bible/: .gitignore  AndroidManifest.xml  README.md  bob.toml  build.sh
bible/downloader/: Cargo.toml
bible/tools/: Cargo.toml  convert_ops.py  scrape.sh  scrape_opwekking.py
bible/tools/bible-dl/src/: main.rs  structs.rs
coinlist/: AndroidManifest.xml  README.md  bob.toml  build.sh
hackernews/: AndroidManifest.xml  README.md  bob.toml  build.sh  hackernews.apk
lib/alerts/: AndroidManifest.xml  bob.toml
lib/compat/: AndroidManifest.xml  bob.toml
lib/fetch/: AndroidManifest.xml  bob.toml
lib/nullsafe/: bob.toml
lib/ratingalert/: AndroidManifest.xml  (+1 more)
redsquare/: AndroidManifest.xml  README.md  bob.toml  build.sh
rfidviewer/: AndroidManifest.xml  README.md  bob.toml  build.sh
swing-test/: Test.java
tweakers/: AndroidManifest.xml  README.md  bob.toml  build.sh  tweakers.apk
(+419 files in other folders)
