[package]
name = "bible-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
rand = "0.8"
rusqlite = "0.31"
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8"
ureq = "2.9"
